Added content and favicon.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="fav.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/landing.css" />
@@ -31,23 +33,35 @@
     </header>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <div class="page-wrap">
-            <div class="tempComingSoon">
-              Coming Soon!
+        <div class="col-md-9">
+          <h3>
+            What is funcjs?
+          </h3>
+          <p>
+          FuncJS is a small library which enables functional programming in JavaScript.
+          </p>
+        </div>
+        <div class="col-md-3">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              Download
             </div>
-            <div class="spinner">
-              <span>JS</span>
+            <div class="panel-body">
+              <p>
+              Download the latest version of the library.
+              </p>
+              <a href="https://raw.githubusercontent.com/vishalknitian/funcjs/master/func.js" class="center-block btn btn-primary">
+                Download v1.0.0
+              </a>
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          Hello
-        </div>
       </div>
     </div>
-    <footer>
-      <div class="footer site-footer">&copy; funcJS 2016</div>
+    <footer class="footer">
+      <div class="container">
+        Copyright &copy;  funcjs 2016
+      </div>
     </footer>
   </body>
 </html>
